jasn/examples/invalid/uppercase_nan.jasn
// Uppercase NaN (should be lowercase)
{
  bad: NaN
}
